# fs-slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
examples/: CMakeLists.txt  odometry_test.cpp
include/: GraphManager.h  SlamNode.h
launch/: aruco_detect.launch  fiducial_slam.launch  real_slam.launch  run_experiment.launch  sbg_device.launch  sim_slam.launch  slam.launch
params/: ellipse_A.yaml  logitechc920.yaml  real_slam_params.yaml  sbg_ellipseA_imu_param.yaml  sim_slam_params.yaml  slam_params.yaml
rosbags/sim_results/: 2020-06-15-09-22-41.bagdata.pkl  best_so_far.bagdata.pkl
src/: 2.bagdata.pkl  BundleAdjuster.py  GraphManager.cpp  LandmarkDetector.py  SlamNode.cpp  compensate_bias.py  no_rot.bagdata.pkl  rosbag_plots.py  test_utils.py  two_view_adjustment.py
tests/: landmarks_pure_pitch.txt  landmarks_pure_roll.txt  landmarks_pure_trans.txt  landmarks_pure_yaw.txt  puto.txt  test_utils.py
utils/: map_11.txt  tank_map.txt  tank_map_backup.txt  tf_to_path.py  yaml_to_camera_info_publisher.py
