<?xml version="1.0"?>
<package format="2">
  <name>fs-slam</name>
  <version>0.0.0</version>

  <description>Forward-Scan SLAM.</description>
  <maintainer email="teran@mit.edu">tonio</maintainer>
  <maintainer email="aldot@kth.se">aldito</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
